@@ -4,8 +4,9 @@ Version 1.4.0
 	- removed "-mt" from boost libs (thanks to Jakob Gruber)
 	- use SUBSYSTEM in udev rules file (thanks to Jakob Gruber)
 	- fixed immediate specification of fuses on 64-bit systems
-	  (thanks to Matthias Burgholzer
+	  (thanks to Matthias Burgholzer)
 	- fixed specification of usb bus id on 64-bit systems
+	- add workaround to flash files with empty chunks
 
 Version 1.3.1
 	- error message on device id mismatch now shows also the device name
